--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div id="root"></div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://kit.fontawesome.com/04597dd294.js" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
